# autocompletion

./: .cproject  .gitignore  CMakeLists.txt  README.md
Debug/: makefile
Debug/src/server/: subdir.mk
Debug/src/storage/: subdir.mk
autocompletion-jni/: CMakeLists.txt
autocompletion-jni/java/de/jonaskunze/autocompletion/: AlreadyReleasedException.java  Autocompletion.java  CompletionTrie.java  CompletionTrieBuilder.java
autocompletion-jni/src/: Autocompletion.cpp  CompletionTrie.c  CompletionTrie.cpp  CompletionTrieBuilder.cpp  Exceptions.cpp  Exceptions.h  JNIEnvCache.cpp  JNIEnvCache.h  NativeInstance.h
autocompletion-lib/: CMakeLists.txt
autocompletion-lib/src/: BuilderNode.cpp  CompletionTrie.cpp  CompletionTrieBuilder.cpp  PackedNode.cpp  PerformanceTest.h  SuggestionList.cpp  SuggestionStore.cpp
autocompletion-server/: CMakeLists.txt
autocompletion-server/src/: CompletionServer.cpp  main.cpp
autocompletion-server/src/options/: Options.cpp
cmake/Modules/: FindZeroMQ.cmake
include/autocompletion/: BuilderNode.h  CompletionTrie.h  CompletionTrieBuilder.h  PackedNode.h  SuggestionList.h  SuggestionStore.h
src/: CMakeLists.txt
